[gd_scene load_steps=2 format=2]

[ext_resource path="res://Nodes/Test node.gd" type="Script" id=1]

[node name="Test node" type="GraphNode"]
anchor_right = 1.0
anchor_bottom = 0.5
margin_right = -749.0
margin_bottom = -189.0
size_flags_stretch_ratio = 0.0
custom_constants/port_offset = 0
title = "Test node"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = true
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 259.0
margin_bottom = 44.0

[node name="Button" type="Button" parent="HBoxContainer"]
margin_right = 119.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "ADD"

[node name="Button2" type="Button" parent="HBoxContainer"]
margin_left = 123.0
margin_right = 243.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "REMOVE"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 44.0
margin_right = 259.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 30 )

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
margin_right = 243.0
margin_bottom = 30.0
size_flags_vertical = 3

[connection signal="close_request" from="." to="." method="_on_Test_node_close_request"]
[connection signal="resize_request" from="." to="." method="_on_Test_node_resize_request"]
[connection signal="resized" from="." to="." method="_on_Test_node_resized"]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
